# -*- mode: bazel; -*-
# vi: set ft=bazel:

#
# WORKSPACE.bzlmod
# RVO2 Library Java
#
# SPDX-FileCopyrightText: 2008 University of North Carolina at Chapel Hill
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Please send all bug reports to <geom@cs.unc.edu>.
#
# The authors may be contacted via:
#
# Jur van den Berg, Stephen J. Guy, Jamie Snape, Ming C. Lin, Dinesh Manocha
# Dept. of Computer Science
# 201 S. Columbia St.
# Frederick P. Brooks, Jr. Computer Science Bldg.
# Chapel Hill, N.C. 27599-3175
# United States of America
#
# <https://gamma.cs.unc.edu/RVO2/>
#

module(
    name = "rvo_java",
    version = "2.0.0",
)

bazel_dep(name = "rules_java", version = "6.1.0")
bazel_dep(name = "rules_jvm_external", version = "5.2")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = ["org.apache.commons:commons-math3:3.6.1"],
    lock_file = "@//:maven_install.json",
)
use_repo(maven, "maven")

non_module_deps = use_extension("//:extensions.bzl", "non_module_deps")
use_repo(non_module_deps, "google_bazel_common")

bazel_dep(name = "rules_license", version = "0.0.4")

bazel_dep(name = "rules_pkg", version = "0.9.1", dev_dependency = True)
